Modifico los métodos para que trabajen con un genérico T en vez de limitarlo a integers. Agrego comentarios y optimizo donde es posible