@@ -2,28 +2,33 @@ package Ordenamiento;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Map;
 import java.util.PriorityQueue;
-import java.util.Arrays;
+import java.util.Stack;
 import java.util.Collections;
 import java.util.HashMap;
 
 public class Ordenamiento {
-	public ArrayList<LinkedList<Integer>> apilar(LinkedList<Integer> vec)
+
+	public <T extends Comparable<T>> List<Stack<T>> apilar(List<T> vec)
 	{
-		// 10 11 12 13 1
-		ArrayList<LinkedList<Integer>> resultado = new ArrayList<LinkedList<Integer>>();
-		//Primer elemento, se crea la linkedList y le metemos el primer elemento de vec
-		resultado.add(new LinkedList<Integer>());
-		ArrayList<Integer> topes = new ArrayList<Integer>();
-		int primero=vec.poll();
-		resultado.get(0).add(primero);
-		topes.add(primero);
-		for (Integer elem : vec) {
+		if(vec.isEmpty())
+			return null;
+		List<Stack<T>> resultado = new ArrayList<Stack<T>>();
+		//Primer elemento, se crea la pila y le metemos el primer elemento de vec
+		resultado.add(new Stack<T>());
+		ArrayList<T> topes = new ArrayList<T>();
+		//Sobre este ArrayList vamos a hacer bsearch aprovechando que está por
+		//definición ordenado de menor a mayor
+		resultado.get(0).add(vec.getFirst());
+		topes.add(vec.getFirst());
+		for(int i=1; i<=vec.size()-1; i++) {
+			T elem = vec.get(i);
 			int pos=this.busquedaBinariaMod(topes, elem);
 			if(pos>resultado.size()-1)
 			{
-				resultado.add(new LinkedList<Integer>());
+				resultado.add(new Stack<T>());
 				topes.add(elem);
 			}
 			else
@@ -32,56 +37,65 @@ public class Ordenamiento {
 			}
 			resultado.get(pos).add(elem);
 		}
-		vec.addFirst(primero);
 		return resultado;
 	}
 	
-	public ArrayList<Integer> ordenarPilas(ArrayList<LinkedList<Integer>> pilas)
+	public <T extends Comparable<T>> List<T> ordenarPilas(List<Stack<T>> pilas)
 	{
-		System.out.println("Inicio de ordenarPilas" + pilas);
+		if(pilas == null)
+			return null;
+		
 		int cont=0;
 		int tam= pilas.size();
-		PriorityQueue<Integer> cola = new PriorityQueue<Integer>();
-		ArrayList<Integer> ordenada = new ArrayList<Integer>();
-		Map<Integer, Integer> tuplaTopes = new HashMap<Integer, Integer>();
+		PriorityQueue<T> cola = new PriorityQueue<T>();
+		//Usamos cola de prioridad porque encuentra el minimo en log n
+		ArrayList<T> ordenada = new ArrayList<T>();
+		Map<T, Integer> tuplaTopes = new HashMap<T, Integer>();
 		//Carga inicial de topes
-		for (LinkedList<Integer> lista : pilas) {
-			int numero=lista.getLast();
-			cola.add(numero);
-			tuplaTopes.put(numero, cont);
+		for (Stack<T> pila : pilas) {
+			T elem=pila.getLast();
+			cola.add(elem);
+			tuplaTopes.put(elem, cont);
 			cont++;
 		}
-		System.out.println("Cola de prioridad: "+ cola);
-		System.out.println("Cantidad de pilas "+ pilas.size());
 		while(tam>0)
 		{
-			int numero=cola.remove();
-			System.out.println("De la cola de prioridad saco " + numero);
-			ordenada.add(numero);
-			int pos = tuplaTopes.get(numero);
+			T elem=cola.remove();
+			ordenada.add(elem);
+			int pos = tuplaTopes.get(elem);
 			pilas.get(pos).removeLast();
 			if(pilas.get(pos).isEmpty())
 			{
-				tam--;
-				tuplaTopes.remove(numero);
+				tam--; 
+				//No puedo sacar una pila porque cambiaría los indices internos
+				//de la lista de pilas. Pos no se vuelve a repetir
 			}
 			else
 			{
-				numero=pilas.get(pos).getLast();
-				cola.add(numero);
-				tuplaTopes.put(numero, pos);
+				elem=pilas.get(pos).getLast();
+				cola.add(elem);
+				tuplaTopes.put(elem, pos);
 			}			
 		}
 		return ordenada;
 	}
-	public ArrayList<Integer> ordenarNumeros(LinkedList<Integer> vec) {
+	public <T extends Comparable<T>> List<T> ordenarNumeros(LinkedList<T> vec) {
 		return this.ordenarPilas(this.apilar(vec));
 	}	
 	//Esta busqueda retorna la posicion final donde debe ser insertado el elemento N
 	//Lo dejo en publico para testearlo, la idea final seria que sea privado
-	public int busquedaBinariaMod(ArrayList<Integer> vec, int elem)
+	public <T extends Comparable<T>> int busquedaBinariaMod(ArrayList<T> vec, T elem)
 	{
-		int res = Collections.binarySearch(vec, elem);
+		int res = Collections.binarySearch(vec, elem);		
 		return (res < 0)?(res * (-1) - 1):res;
+//		la bsearch por defecto devuelve el indice en el que está el elemento si
+//		lo encuentra. Sino devuelve la posición en la que se ubicaría pero negativa
+//		y -1. Ejemplo: Vector [4, 6, 8, 10, 11]
+//		bsearch(4) = 0
+//		bsearch(7) = -3 (iría en la posición 2, por lo que hace -2 - 1 = -3)
+//		bsearch(2) = -1
+//		bsearch(20)= -6 
+//		Con la corrección del resultado me dice exactamente donde iría el elemento
+//		a insertar
 	}
 }
